tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_elixir_defguard_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\ndefmodule Validators do\n  defguard is_positive(value) when is_integer(value) and value > 0\n\n  defguardp is_even(value) when rem(value, 2) == 0\n\n  def validate(n) when is_positive(n) do\n    {:ok, n}\n  end\n\n  def validate(_n) do\n    {:error, :invalid}\n  end\nend\n",
      "end_line": 14,
      "language": "elixir",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "defmodule Validators",
      "end_line": 2,
      "language": "elixir",
      "name": "module_name",
      "original_indentation": 10,
      "start_line": 2
    },
    {
      "chunk_type": "Module",
      "comment_ranges": [],
      "content": "defmodule Validators do\n  defguard is_positive(value) when is_integer(value) and value > 0\n\n  defguardp is_even(value) when rem(value, 2) == 0\n\n  def validate(n) when is_positive(n) do\n    {:ok, n}\n  end\n\n  def validate(_n) do\n    {:error, :invalid}\n  end\nend",
      "end_line": 14,
      "language": "elixir",
      "name": "defmodule",
      "original_indentation": 0,
      "start_line": 2
    }
  ],
  "source_code": "\ndefmodule Validators do\n  defguard is_positive(value) when is_integer(value) and value > 0\n\n  defguardp is_even(value) when rem(value, 2) == 0\n\n  def validate(n) when is_positive(n) do\n    {:ok, n}\n  end\n\n  def validate(_n) do\n    {:error, :invalid}\n  end\nend\n",
  "test_name": "test_elixir_defguard_extraction",
  "total_chunks": 3
}
