tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_elixir_mixed_definitions.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\ndefmodule Calculator do\n  def add(a, b) do\n    a + b\n  end\n\n  def subtract(a, b) do\n    a - b\n  end\n\n  defp validate(n) do\n    is_number(n)\n  end\nend\n",
      "end_line": 14,
      "language": "elixir",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "defmodule Calculator",
      "end_line": 2,
      "language": "elixir",
      "name": "module_name",
      "original_indentation": 10,
      "start_line": 2
    },
    {
      "chunk_type": "Module",
      "comment_ranges": [],
      "content": "defmodule Calculator do\n  def add(a, b) do\n    a + b\n  end\n\n  def subtract(a, b) do\n    a - b\n  end\n\n  defp validate(n) do\n    is_number(n)\n  end\nend",
      "end_line": 14,
      "language": "elixir",
      "name": "defmodule",
      "original_indentation": 0,
      "start_line": 2
    }
  ],
  "source_code": "\ndefmodule Calculator do\n  def add(a, b) do\n    a + b\n  end\n\n  def subtract(a, b) do\n    a - b\n  end\n\n  defp validate(n) do\n    is_number(n)\n  end\nend\n",
  "test_name": "test_elixir_mixed_definitions",
  "total_chunks": 3
}
