tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_erlang_case_expression.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\n-module(handler).\n-export([process/1]).\n\nprocess(Value) ->\n    case Value of\n        {ok, Result} -> Result;\n        {error, Reason} -> throw(Reason);\n        _ -> undefined\n    end.\n",
      "end_line": 10,
      "language": "erlang",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Module",
      "comment_ranges": [],
      "content": "-module(handler).",
      "end_line": 2,
      "language": "erlang",
      "name": "handler",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "-export([process/1]).",
      "end_line": 3,
      "language": "erlang",
      "name": "-export([process/1]).",
      "original_indentation": 0,
      "start_line": 3
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "process(Value) ->\n    case Value of\n        {ok, Result} -> Result;\n        {error, Reason} -> throw(Reason);\n        _ -> undefined\n    end.",
      "end_line": 10,
      "language": "erlang",
      "name": "process",
      "original_indentation": 0,
      "start_line": 5
    },
    {
      "chunk_type": "Conditional",
      "comment_ranges": [],
      "content": "    case Value of\n        {ok, Result} -> Result;\n        {error, Reason} -> throw(Reason);\n        _ -> undefined\n    end",
      "end_line": 10,
      "language": "erlang",
      "name": "case Value of\n        {ok, Result} -> Result;\n        {error, Reason} -> throw(Reason);\n        _ -> undefined\n    end",
      "original_indentation": 4,
      "start_line": 6
    }
  ],
  "source_code": "\n-module(handler).\n-export([process/1]).\n\nprocess(Value) ->\n    case Value of\n        {ok, Result} -> Result;\n        {error, Reason} -> throw(Reason);\n        _ -> undefined\n    end.\n",
  "test_name": "test_erlang_case_expression",
  "total_chunks": 5
}
